Omnibox - Exactly-Typed Non-Substituting Keywords Should Be Default

This was broken by
https://chromium.googlesource.com/chromium/src/+/e6fb404456e6336de67e9373398f9e69146f42f2 [formerly 31c2066fb04ade8b1474c27054f425fe8a72d04f]

Tested interactively using repro steps on bug.

Also re-enables programmatic test for this bug.

Bug: 789913
Change-Id: I43a59ef112da6f1e69c30a46c55586d5f9280f41
Reviewed-on: https://chromium-review.googlesource.com/804676
Commit-Queue: Mark Pearson <mpearson@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#521203}
Former-commit-id: 0d2d779e0c03c8c7a3df30b33a33f494cf148629